--- a/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-cpd-instance.yaml
+++ b/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-cpd-instance.yaml
@@ -28,7 +28,7 @@ spec:
       - name: spec.license.license
         value: "Enterprise"
       - name: spec.storageClass
-        value: "managed-nfs-storage"
+        value: "ibm-spectrum-scale-csi-consistency-group-cp4d"
   syncPolicy:
     automated:
       prune: true
